Added the color8CrossProduct. But, I can't quite figure out how to do cmplx(0,-1). Once I figure that out, it will compile properly. In otherwords, this doesn't compile yet

--- a/PETE/QDPOps.in
+++ b/PETE/QDPOps.in
@@ -354,6 +354,18 @@ binaryOps
   @ingroup group1
   @relates QDPType */"
 -----
+  TAG = "FnColor8CrossProduct"
+  FUNCTION = "color8CrossProduct"
+  EXPR = "return (color8CrossProduct(a,b));"
+  COMMENTA = "//! Cross product of two Nc=3 color vectors to make diquark in 8-dim rep"
+  COMMENTB = "/*! 
+  combination of two Nc=3 color vectors with the Gell-Mann matrices
+  @param l  vector
+  @param r  vector
+  @return \f$target^{i} = \sum_{a,b} \lambda^{i}_{a,b} V1^{a} V2^{b}\f$
+  @ingroup group1
+  @relates QDPType */"
+-----
   TAG = "FnLocalInnerProduct"
   FUNCTION = "localInnerProduct"
   EXPR = "return (localInnerProduct(a,b));"
