The products that trasnform a gauge-link into different representations has been implemented in 'qdp_primcolormat.h'. Originally, I put this product into Chroma and it was performed when I needed to displace a diquark in the 6- or 8-dimensional representations. It makes much more sense to be in QDP++. I have only made the functions, and they are incomplete as of now. I will complete them soon.
I also decided to change the name of the 'color8CrossProduct' and
'color6CrossProduct' to 'color8VectorProduct' and 'color6VectorProduct',
respectively. This naming convention makes more sense, because
they aren't really cross products.

--- a/PETE/QDPOps.in
+++ b/PETE/QDPOps.in
@@ -354,27 +354,51 @@ binaryOps
   @ingroup group1
   @relates QDPType */"
 -----
-  TAG = "FnColor6CrossProduct"
-  FUNCTION = "color6CrossProduct"
-  EXPR = "return (color6CrossProduct(a,b));"
-  COMMENTA = "//! Cross product of two Nc=3 color vectors to make diquark in 6-dim rep"
+  TAG = "FnColor6VectorProduct"
+  FUNCTION = "color6VectorProduct"
+  EXPR = "return (color6VectorProduct(a,b));"
+  COMMENTA = "//! Vector product of two Nc=3 color vectors to make diquark in 6-dim rep"
   COMMENTB = "/*! 
-  combination of two Nc=3 color vectors with C matrices
+  product of two Nc=3 color vectors with C matrices
   @param l  vector
   @param r  vector
   @return \f$target^{l} = \sum_{a b}C^{l}_{a b}*source1^{a}*source2^{b}\f$
   @ingroup group1
   @relates QDPType */"
 -----
-  TAG = "FnColor8CrossProduct"
-  FUNCTION = "color8CrossProduct"
-  EXPR = "return (color8CrossProduct(a,b));"
-  COMMENTA = "//! Cross product of two Nc=3 color vectors to make diquark in 8-dim rep"
+  TAG = "FnColor8VectorProduct"
+  FUNCTION = "color8VectorProduct"
+  EXPR = "return (color8VectorProduct(a,b));"
+  COMMENTA = "//! Vector product of two Nc=3 color vectors to make diquark in 8-dim rep"
   COMMENTB = "/*! 
-  combination of two Nc=3 color vectors with the Gell-Mann matrices
+  product of two Nc=3 color vectors with the Gell-Mann matrices
   @param l  vector
   @param r  vector
-  @return \f$target^{i} = \sum_{a,b} \lambda^{i}_{a,b} V1^{a} V2^{b}\f$
+  @return \f$target^{i} = \sum_{a,b} \lambda^{i}_{a,b} source1^{a} source2^{b}\f$
+  @ingroup group1
+  @relates QDPType */"
+-----
+  TAG = "FnColor6MatrixProduct"
+  FUNCTION = "color6MatrixProduct"
+  EXPR = "return (color6MatrixProduct(a,b));"
+  COMMENTA = "//! Matrix product of two Nc=3 color Matrices to make gauge-link in 6-dim rep"
+  COMMENTB = "/*! 
+  product of two Nc=3 color matrices with C matrices
+  @param l  vector
+  @param r  vector
+  @return \f$target^{l,m} = C^{l}_{a b}*source1_{a,c}*source2_{b,d}*C^{m}_{c,d}\f$
+  @ingroup group1
+  @relates QDPType */"
+-----
+  TAG = "FnColor8MatrixProduct"
+  FUNCTION = "color8MatrixProduct"
+  EXPR = "return (color8MatrixProduct(a,b));"
+  COMMENTA = "//! Matrix product of two Nc=3 color Matrices to make gauge-link in 8-dim rep"
+  COMMENTB = "/*! 
+  product of two Nc=3 color matrices with the Gell-Mann matrices
+  @param l  vector
+  @param r  vector
+  @return \f$target^{i,j} = \lambda^{i}_{a,b}*source1_{a,c}*\lambda^{j}_{c,d}*adj(source2_{d,b})\f$
   @ingroup group1
   @relates QDPType */"
 -----
